tests/Rules/Ui/Fixtures/invalid/scrollable_no_tabindex.html.twig
{# 1 errors #}
<div style="overflow: auto;">Content</div>
